# Svectora

./: .gitignore  CMakeLists.txt  README.md
includes/glad/: glad.c  glad.h
src/: main.cpp
src/resources/: vertices.cpp  vertices.h
src/shaders/: basic.frag  basic.vert  pbr.frag
src/utils/: readFile.cpp  readFile.h
